2nd is still running

--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,1 +1,8 @@
-New author
+<h>New author</h>
+
+<form action="/authors/new" method="post">
+    <%- include("_form_fields") %>
+    
+    <a href="/authors">Cancel</a>
+    <button type="submit">Create</button>
+</form>
