--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,1 +1,11 @@
-All authors
+<h2>Search Author</h2>
+<form action="/authors" method="GET">
+    <label>Name</label>
+    <input type="text" name="name" value="">
+    <button type="submit">Search</button>
+</form>
+<br> 
+
+<% output.forEach((entry) => { %>
+    <div> <%= entry.name %> </div>
+<% }) %>
