--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,8 +1,9 @@
-<h>New author</h>
+<h1>New author</h1>
 
 <form action="/authors/new" method="post">
     <%- include("_form_fields") %>
-    
+    <br>
+    <br>
     <a href="/authors">Cancel</a>
     <button type="submit">Create</button>
 </form>
