birthday is wasted

--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,7 +1,7 @@
 <h1>New author</h1>
 
 <form action="/authors/new" method="post">
-    <%- include("_form_fields") %>
+    <%- include("_form_fields.ejs") %>
     <br>
     <br>
     <a href="/authors">Cancel</a>
