author is revised

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,8 +2,10 @@
     <nav>
         <a href="/">Home Page</a>
         <ul>
-            <li><a href="/authors">All Authors</a></li>
+            <li><a href="/authors">All Author</a></li>
             <li><a href="/authors/new">New Author</a></li>
+            <li><a href="/books">All Book</a></li>
+            <li><a href="/books/new">New Book</a></li>
         </ul>
     </nav>
 </header>
